sandbox/output
Patient.java:82: error: cannot find symbol
        int lastIndex = medicine.getPrescriptions().size - 1;
                                                   ^
  symbol:   variable size
  location: interface List<Prescription>
1 error
